# c-case

./: CMakeLists.txt  README.md
output/: 2d-array-addressing  bit-operation  c-extern  constant  define-constant  extern-constant  extern-func  extern-var  file-read-write  float-type  forearch-enum  main  register-var  sizeof  static-var  static-var-1  type-cast  var-define  var-func-1  var-func-2
resources/: students.csv  test.txt
src/: file-read-write.c  float-type.c  main.c
src/array/: 2d-array-addressing.c  2d-array-step-size.c  access-array.c  array.c  dynamic-array.c  foreach-array-pointer.c  get-array-length.c  return-array-from-function.c  static-array.c  transmit-array-to-function.c
src/bitfield/: bit-field-memsize-test.c  declare-use-bit-field-1.c  declare-use-bit-field.c  struct-and-bit-field.c  use-bit-field-by-pointer.c
src/constant/: constant.c  define-constant.c  readme.md
src/datatype/: arithmetic-conversion.c  char-short-convert-to-int.c  decimals-to-int.c  force-type-cast.c  int-to-decimals.c  integer-lifting.c  long-type-to-short-type.c  short-type-to-long-type.c  signed-to-unsigned.c  sizeof.c  type-cast.c  unsigned-to-signed.c
src/enum/: convert-int-to-enum.c  enum.c  foreach-enum.c  switch-enum.c
src/errorhandling/: by-zero-error.c  errno-perror-strerror.c
src/filereadwrite/: file-read-write.c  file-read.c  file-seek.c  file-write.c  parse-csv-and-insert-into-mysql.c  parse-csv-file.c
src/io/: getchar-and-putchar.c  gets-and-puts.c  scanf-and-printf.c
src/memmgmt/: dynamic-memory-allocation.c  readme.md  realloc-free-memory.c
src/operator/: assignment-operation.c  bit-operation.c  miscellaneous-operation.c  precedence-of-operator.c
src/parameter/: call-by-reference.c  call-by-value.c
src/pointer/: char-pointer-array.c  char-pointer-decrease.c  char-pointer-increase.c  compare-equal-pointer.c  compare-size-pointer.c  foreach-compare-pointer.c  int-pointer-array-1.c  int-pointer-array.c  int-pointer-decrease.c  int-pointer-increase.c  pointer-to-pointer.c  pointer.c  return-pointer-from-function.c  struct-pointer-decrease.c  struct-pointer-increase.c  transmit-array-pointer-to-function.c  transmit-pointer-to-function.c  use-pointer.c
src/pointer/function/: callback-function.c  function-pointer.c
src/preprocessor/: parameterized-macro.c  predefine-macro.c
src/preprocessor/operator/: defined.c  mark-paste.c  string-constant.c
src/recursion/: factorial.c  fibonacci.c
src/sortalgorithm/: bubble-sort.c  insertion-sort.c  merge-sort-iteration.c  merge-sort-recursion.c  quick-sort-iteration.c  quick-sort-recursion.c  selection-sort.c  shell-sort.c
src/string/: string.c
src/struct/: access-struct-member.c  calculate-struct-size.c  struct-as-function-parameter.c  struct-define-init.c  struct-pointer-as-function-parameter.c
src/typedef/: typedef-vs-define.c
src/undefinedbehavior/: readme.md
src/union/: access-union-member-incorrect.c  union-declare-define.c
src/variable/: register-var.c  static-var-1.c  static-var.c  var-define.c
src/variableparameter/: variable-parameter-1.c  variable-parameter-2.c  variable-parameter-3.c  variable-parameter.c
