cmake_minimum_required(VERSION 3.28)
project(c_case C)

set(CMAKE_C_STANDARD 11)

add_executable(struct-define-init src/struct/struct-define-init.c)
add_executable(access-struct-member src/struct/access-struct-member.c)
add_executable(struct-as-function-parameter src/struct/struct-as-function-parameter.c)
add_executable(struct-pointer-as-function-parameter src/struct/struct-pointer-as-function-parameter.c)
add_executable(calculate-struct-size src/struct/calculate-struct-size.c)
add_executable(union-declare-define src/union/union-declare-define.c)
add_executable(access-union-member-incorrect src/union/access-union-member-incorrect.c)
add_executable(access-union-member-correct src/union/access-union-member-correct.c)
add_executable(struct-and-bit-field src/bitfield/struct-and-bit-field.c)
add_executable(declare-use-bit-field src/bitfield/declare-use-bit-field.c)
add_executable(declare-use-bit-field-1 src/bitfield/declare-use-bit-field-1.c)
add_executable(use-bit-field-by-pointer src/bitfield/use-bit-field-by-pointer.c)
add_executable(bit-field-memsize-test src/bitfield/bit-field-memsize-test.c)
add_executable(typedef-vs-define src/typedef/typedef-vs-define.c)
add_executable(getchar-and-putchar src/io/getchar-and-putchar.c)
add_executable(gets-and-puts src/io/gets-and-puts.c)
add_executable(scanf-and-printf src/io/scanf-and-printf.c)
add_executable(sizeof src/datatype/sizeof.c)
add_executable(type-cast src/datatype/type-cast.c)
add_executable(file-read-write src/filereadwrite/file-read-write.c)
add_executable(parse-csv-file src/filereadwrite/parse-csv-file.c)
add_executable(file-write src/filereadwrite/file-write.c)
add_executable(file-read src/filereadwrite/file-read.c)
add_executable(2d-array-addressing src/array/2d-array-addressing.c)
add_executable(array src/array/array.c)
add_executable(2d-array-step-size src/array/2d-array-step-size.c)
add_executable(file-seek src/filereadwrite/file-seek.c)
add_executable(predefine-macro src/preprocessor/predefine-macro.c)
add_executable(string-constant src/preprocessor/operator/string-constant.c)
add_executable(mark-paste src/preprocessor/operator/mark-paste.c)
add_executable(defined src/preprocessor/operator/defined.c)
add_executable(parameterized-macro src/preprocessor/parameterized-macro.c)
add_executable(bit-operation src/operator/bit-operation.c)
add_executable(precedence-of-operator src/operator/precedence-of-operator.c)
add_executable(assignment-operation src/operator/assignment-operation.c)
add_executable(miscellaneous-operation src/operator/miscellaneous-operation.c)
add_executable(force-type-cast src/datatype/force-type-cast.c)
add_executable(integer-lifting src/datatype/integer-lifting.c)
add_executable(arithmetic-conversion src/datatype/arithmetic-conversion.c)
